--- a/frontend/src/component/user/profile.css
+++ b/frontend/src/component/user/profile.css
@@ -1,6 +1,8 @@
 .profile-container {
+  flex: 1 1 auto;
+  overflow-y: auto;
   display: flex;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   /* position: fixed;
   top: 0%;
@@ -9,8 +11,8 @@
   background-color: white;
 }
 .profile-container > div {
+  padding-top: 10px;
   display: flex;
-  height: 100vh;
   width: 100vw;
   max-width: 100%;
   flex-direction: column;
@@ -51,7 +53,7 @@
 .profile-container > div:last-child {
   justify-content: space-evenly;
   align-items: flex-start;
-  padding: 5vmax;
+  /* padding: 5vmax; */
   box-sizing: border-box;
 }
 .profile-container > div:last-child > div > h4 {
@@ -92,8 +94,8 @@
   }
   .profile-container > div:first-child > h1 {
     font-weight: 500;
-    font-size: 3.2vmax;
-    transform: translateY(-2vmax);
+    font-size: 22px;
+    transform: translateY(0vmax);
   }
   .profile-container > div:first-child > a {
     font-weight: 400;
