--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,11 @@
 .App {
   text-align: center;
 }
-
+body{
+  width: 100vw;
+  box-sizing: border-box;
+  overflow: hidden;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
