--- a/frontend/src/component/user/updateProfile.css
+++ b/frontend/src/component/user/updateProfile.css
@@ -159,3 +159,8 @@
     padding: 1.8vmax;
   }
 }
+/* not custom classes */
+.dropdown-menu[data-bs-popper] {
+  left: unset !important;
+  right: 0 !important;
+}
