--- a/frontend/src/component/batch/actionBatch.css
+++ b/frontend/src/component/batch/actionBatch.css
@@ -51,4 +51,9 @@
   .batchDetailTable tbody tr td{
     padding: 5px;
   }
+  .deleteBtnGroup{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
   
