--- a/frontend/src/component/dashBoard/assignPermission.css
+++ b/frontend/src/component/dashBoard/assignPermission.css
@@ -15,4 +15,15 @@
   button {
     margin-top: 20px;
   }
+  .successMessage {
+    color: green;
+    font-size: 16px;
+    margin-top: 10px;
+  }
+  
+  .errorMessage {
+    color: red;
+    font-size: 16px;
+    margin-top: 10px;
+  }
   
