css updated for dashboard

--- a/frontend/src/component/dashBoard/mainDash.css
+++ b/frontend/src/component/dashBoard/mainDash.css
@@ -51,7 +51,7 @@
     height: 35px; /* Height of the list item */
     width: 35px; /* Width of the curve effect */
     background-color: #2166D1; /* Color of the curve effect */
-    border-radius: 50%;
+    border-radius: 150px 0px 80px 0px;
     box-shadow: 10px 10px 5px -2px #fff;
 }
 .leftBox ul li:hover::after{
@@ -62,7 +62,7 @@
     height: 35px;
     width: 35px;
     background-color: #2166D1;
-    border-radius: 50%;
+    border-radius: 0px 80px 0px 150px;
     box-shadow: 10px -10px 5px -2px #fff;
 }
 .leftBox ul li.active{
