--- a/frontend/src/component/course/actionCourse.css
+++ b/frontend/src/component/course/actionCourse.css
@@ -60,6 +60,7 @@
     display: flex;
     flex-direction: column;
   }
+  .editDataBox > select,
   .editDataBox > input{
     border-radius: 5px;
     border: 1px solid #000;
