--- a/frontend/src/component/userDashBoard/studentRegistration.css
+++ b/frontend/src/component/userDashBoard/studentRegistration.css
@@ -1,10 +1,10 @@
 .studentRegistrationSection {
-  padding: 40px;
+  padding: 10px;
   background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
   border-radius: 12px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   max-width: 750px;
-  margin: 50px auto;
+  margin: 0px auto;
   transition: transform 0.3s ease;
 }
 
@@ -13,9 +13,9 @@
 }
 
 .form-title {
-  font-size: 32px;
+  font-size: 22px;
   color: #333;
-  margin-bottom: 25px;
+  margin: 25px 0px;
   text-align: center;
   font-weight: bold;
   letter-spacing: 2px;
