--- a/frontend/src/component/user/updateProfile.css
+++ b/frontend/src/component/user/updateProfile.css
@@ -1,14 +1,16 @@
 .updateProfileContainer {
+  flex: 1 1 auto;
+  overflow-y: auto;
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   max-width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgb(231, 231, 231);
-  position: fixed;
-  top: 0%;
-  left: 0;
+  /* position: fixed; */
+  /* top: 0%; */
+  /* left: 0; */
 }
 
 .updateProfileBox {
