forgot pass added3

--- a/frontend/src/component/user/forgotPassword.css
+++ b/frontend/src/component/user/forgotPassword.css
@@ -88,7 +88,11 @@
   .updatePasswordBtn:hover {
     background-color: #016c81;
   }
-  
+  .successMessage {
+    color: green;
+    font-size: 16px;
+    margin-top: 10px;
+}
   /* Responsive Design */
   @media (max-width: 600px) {
     .updatePasswordBox {
