--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,8 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+:root{
+  --app-height : 100vh
+}
 #root{
   display: flex;
   flex-direction: column;
-  height: 100vh
+  /* height: 100vh */
+  height: var(--app-height);
 }
+
