--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,8 +12,8 @@ code {
     monospace;
 }
 :root{
-  --app-height : 100vh
-  --app-width : 100vw
+  --app-height : 100vh;
+  --app-width : 100vw;
 }
 #root{
   display: flex;
