--- a/frontend/src/component/layout/loader/loader.css
+++ b/frontend/src/component/layout/loader/loader.css
@@ -1,7 +1,28 @@
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100% - 75px;
+  /* background-color: rgba(0, 0, 0, 0.7); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loader-overlay .loader {
+  width: 50px;
+  height: 50px;
+  border: 5px solid rgba(255, 255, 255, 0.3);
+  border-top: 5px solid #fff;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
 .loading {
   width: 100vw;
   height: 100vh;
-  background-color: white;
+  /* background-color: white; */
   display: grid;
   place-items: center;
   max-width: 100%;
@@ -11,7 +32,7 @@
   width: 10vmax;
   height: 10vmax;
 
-  border-bottom: 5px solid rgba(0, 0, 0, 0.719);
+  border-bottom: 5px solid #FAC880;
   border-radius: 50%;
 
   animation: loadingRotate 800ms linear infinite;
