--- a/frontend/src/component/exam/examMarksInput.css
+++ b/frontend/src/component/exam/examMarksInput.css
@@ -20,7 +20,7 @@
     padding: 10px 5px;
 }
   
-  table {
+  .marksInputTable {
     width: 100%;
     border-collapse: collapse;
     margin: 0 auto;
@@ -28,19 +28,19 @@
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
   }
   
-  th, td {
-    padding: 10px;
+  .marksInputTable th, .marksInputTable td {
+    padding: 10px 5px;
     text-align: center;
     border: 1px solid #ddd;
   }
   
-  th {
+  .marksInputTable th {
     background-color: #016c81;
     color: white;
     font-weight: bold;
   }
   
-  td {
+  .marksInputTable td {
     font-size: 14px;
     color: #555;
   }
