--- a/frontend/src/component/student/getPendingStudents.css
+++ b/frontend/src/component/student/getPendingStudents.css
@@ -21,9 +21,9 @@
     text-align: left;
   }
   
-  .studentTable th {
+  /* .studentTable th {
     background-color: #f4f4f4;
-  }
+  } */
   .studentTable tbody tr:hover{
     background-color: #016c81;
     color: #fff;
