exam model updated

--- a/frontend/src/component/exam/examMarksInput.css
+++ b/frontend/src/component/exam/examMarksInput.css
@@ -64,7 +64,7 @@
     border-color: #016c81;
   }
   
-  button {
+  .marksInputSection button {
     display: block;
     margin: 20px auto;
     padding: 10px 20px;
