--- a/frontend/src/component/class/pendingClass.css
+++ b/frontend/src/component/class/pendingClass.css
@@ -91,6 +91,7 @@
     display: flex;
     justify-content: space-around;
     gap: 10px;
+    align-items: center;
   }
   .class-actions > button{
     width: 40%;
