--- a/frontend/src/component/userDashBoard/actionOtp.css
+++ b/frontend/src/component/userDashBoard/actionOtp.css
@@ -10,7 +10,7 @@
     align-items: center;
   }
   
-  .popup-content {
+  .otp-popup-content {
     background: #fff;
     padding: 20px;
     border-radius: 8px;
